snake_case classes

--- a/README
+++ b/README
@@ -2,3 +2,17 @@
 
 phpmd rules to add snake_case validation for Wordpress coding style convention.
 
+## Wordpress coding style
+
+- Use snake_case for :
+    - variable
+    - function names
+    - class methods
+    - class properties
+    - parameter names
+- Use Snake_Case for :
+    - class names
+    - trait names
+    - interface names
+    - enum names
+
